[gd_scene load_steps=5 format=3 uid="uid://ccoe0acmb0lwg"]

[ext_resource type="Script" path="res://scripts/plant.gd" id="1_aqh64"]

[sub_resource type="CircleShape2D" id="CircleShape2D_epmyl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g4mcd"]
bg_color = Color(0.415686, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_snhif"]
bg_color = Color(0.286275, 0.737255, 0.294118, 1)

[node name="Plant" type="Area2D"]
script = ExtResource("1_aqh64")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_epmyl")

[node name="ProgressBar" type="ProgressBar" parent="."]
z_index = 100
z_as_relative = false
offset_left = -15.0
offset_top = 9.0
offset_right = 14.0
offset_bottom = 11.0
theme_override_styles/background = SubResource("StyleBoxFlat_g4mcd")
theme_override_styles/fill = SubResource("StyleBoxFlat_snhif")
value = 75.0
show_percentage = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
